--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -56,19 +56,17 @@
             <div class="container">
                 <div class="header-navibox-1">
                     <ul class="main-menu yamm nav navbar-nav">
-                        <!--售后入口，为空///////////////////////////////////////////////////////////////////////////////////////-->
                         <li>
-                            <a><h5></h5></a>
+                            <a><h5>&nbsp;</h5></a>
                         </li>
                         <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="home.html"><h5>主 页</h5></a>
+                        <li><a href="home.html"><h5>首 页</h5></a>
                         </li>
                         <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="collection.html"><h5>收 藏</h5></a>
                         </li>
                         <li><a href="order.html"><h5>我 的 订 单</h5></a>
-                        </li><li><h5><a href="display.html">个人信息</a></h5>
-                    </li>
+                        </li>
                     </ul>
                 </div>
                 <div class="header-navibox-2">
@@ -76,28 +74,20 @@
                         <li>
                             <a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                         </li>
-                        <li><h5></h5>
-                        </li>
-                        <!--用户个人信息入口///////////////////////////////////////////////////////////////////////////////////////-->
-
                         <li>
                             <span class="header-cart">
                                 <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
                                 <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
                             </span>
                         </li>
+                        <li><h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="display.html">个 人 信 息</a>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
+                        </li>
                         <li class="active"><h5>
                             <a onclick="exit()">退出</a></h5>
                         </li>
                     </ul>
-                    <!--<ul class="nav-language list-inline">-->
-                        <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
-
-                        <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-
-                    <!--</ul>-->
-                    <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
-                    <!--点击，重新进入主页/////////////////////////////////////////////////////////////-->
                     <a class="navbar-brand scroll" href="home.html">
                         <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
@@ -287,7 +277,7 @@
                         </div>
                         <div class="b-goods__img">
                             <a href="shop.html?search=女装"><img class="img-responsive" src="static/images/timg3.jpg"
-                                                                 alt="img"></a>
+                                                               alt="img"></a>
                         </div>
                     </div>
                     <div class="b-goods b-goods-3">
