--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -123,7 +123,7 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="items-Homepage.html"><h5>主 页</h5></a>
+                            <li><a href="items-Homepage.html"><h5>首 页</h5></a>
                             </li>
                             <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
@@ -134,17 +134,12 @@
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
                             <li><a onclick="exit()"><h5 style="color: grey">退 出</h5></a>
                             </li>
                         </ul>
-                        <!--<ul class="nav-language list-inline">-->
-                            <!--<a onclick="exit()">退 出</a>-->
-                        <!--</ul>-->
-                        <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
                             <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
@@ -159,8 +154,9 @@
             <div class="l-main-content l-main-content_w-border">
                 <div class="row">
                     <p>&nbsp;</p>
-                    <center><h2>数 据 统 计</h2></center>
-                    <p>&nbsp;</p><p>&nbsp;</p>
+                    <center><h2>数 据 统 计 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2></center>
+                    <p>&nbsp;</p>
+                    <!--<p>&nbsp;</p>-->
 
                     <div class="col-md-5 col-md-offset-1" style="width: 100%">
                         <div class="tabs-type-2"  style="width:1200px;float:left;margin-left: 150px">
