'所有页面完善'

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -113,10 +113,10 @@
                              data-show-duration="2000" data-show-delay="1200" data-hide-delay="400">
                             <div class="main-slider__info">TAKAHIROMIYASHITA</div>
                             <div class="main-slider__label">sale 50%</div>
-                        </div>
+                        </div><a href="shop.html?search=Adidas">
                         <h2 class="main-slider__title sp-layer" data-width="100%" data-show-transition="left"
                             data-hide-transition="left" data-show-duration="800" data-show-delay="400"
-                            data-hide-delay="400">Sale of autumn collection Adidas and Nike</h2>
+                            data-hide-delay="400">Sale of autumn collection Adidas</h2></a>
                     </div>
                 </div>
                 <!--最大的，海报展示1，结束/////////////////////////////////////////////////////////////-->
@@ -130,9 +130,10 @@
                             <div class="main-slider__info">TAKAHIROMIYASHITA</div>
                             <div class="main-slider__label">sale 50%</div>
                         </div>
+                        <a href="shop.html?search=Nike">
                         <h2 class="main-slider__title sp-layer" data-width="100%" data-show-transition="left"
                             data-hide-transition="left" data-show-duration="800" data-show-delay="400"
-                            data-hide-delay="400">Sale of autumn collection Adidas and Nike</h2>
+                            data-hide-delay="400">Sale of autumn collection Nike</h2></a>
                     </div>
                 </div>
                 <!--最大的，海报展示2，结束/////////////////////////////////////////////////////////////-->
