--- a/src/main/webapp/items-update.html
+++ b/src/main/webapp/items-update.html
@@ -130,7 +130,7 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="items-Homepage.html"><h5>主 页</h5></a>
+                            <li><a href="items-Homepage.html"><h5>首 页</h5></a>
                             </li>
                             <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
@@ -141,24 +141,13 @@
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
-                            <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
-                                                                         aria-hidden="true"></i></a><span
-                                    class="header-cart-count bg-primary">0</span></span>
-                            </li> -->
-                        </ul>
-                        <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="seller_login.html">登 陆</a>
-                            </li>
-                            <li><a onclick="exit()">退 出</a>
+                            <li><a onclick="exit()"><h5 style="color: grey">退 出</h5></a>
                             </li>
                         </ul>
-                        <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
-                        <a class="navbar-brand scroll" href="home.html">
+                        <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
                             <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                             <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
@@ -187,13 +176,6 @@
                 <div class="col-md-12">
                     <div class="woocommerce">
                         <form class="checkout_coupon" method="post" style="display:none">
-                            <p class="form-row form-row-first">
-                                <input type="text" name="coupon_code" class="input-text" placeholder="Coupon code"
-                                       id="coupon_code" value="">
-                            </p>
-                            <p class="form-row form-row-last">
-                                <input type="submit" class="button" name="apply_coupon" value="Apply Coupon">
-                            </p>
                             <div class="clear"></div>
                         </form>
                         <form name="checkout" method="post" class="checkout woocommerce-checkout" id="formTest"
@@ -222,43 +204,19 @@
                                                 <input type="text" class="input-text " name="iExsit" id="iExsit">
                                             </p>
                                         </div>
-
                                         <div class="b-filter__group" >
-                                            <p class="form-row form-row form-row-first">
-
-                                                <label>店铺名(Store)</abbr></label>
-                                            </p>
-                                            <select class="selectpicker"  name="storeId" id="storeId" data-width="100%">
-                                                <option value="-1">请选择店铺名</option>
-                                            </select>
+                                            <p>&nbsp;<br><br><br></p>
                                         </div>
-
-                                        <div class="b-filter__group">
-                                            <p class="form-row form-row form-row-first">
-                                                <!--商家选择商品分类，categoryFather/////////////////////////////////////////////////////////////-->
-                                                <label>商品类型(Category)</abbr></label>
+                                        <div class="b-filter__group" >
+                                        <div class="woocommerce-shipping-fields">
+                                            <!--商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
+                                            <h4>关于商品的介绍</h4>
+                                            <p class="form-row form-row">
+                                                <label for="order_comments" class="">Items Introduction</label>
+                                                <textarea name="iIntroduction" class="input-text " id="order_comments"
+                                                          placeholder="写下产品的优点、特色、使用方法等......"></textarea>
                                             </p>
-                                            <select class="selectpicker" data-width="100%" id="caFather" name="caFather"
-                                                    onchange="sonSel()">
-                                                <!--动态获取商店名称，storeId/////////////////////////////////////////////////////////////-->
-                                                <option value="-1">请选择商品类型</option>
-                                                <option value="男鞋">男鞋</option>
-                                                <option value="男装">男装</option>
-                                                <option value="女鞋">女鞋</option>
-                                                <option value="女装">女装</option>
-                                                <option value="手机数码">手机数码</option>
-                                                <option value="电器">电器</option>
-                                            </select>
                                         </div>
-
-                                        <div class="b-filter__group">
-                                            <p class="form-row form-row form-row-first">
-                                                <!--商家选择商品子类别，categoryName/////////////////////////////////////////////////////////////-->
-                                                <label>商品子类型(Category)</abbr></label>
-                                            </p>
-                                            <select class="selectpicker" data-width="100%" name="catagoryId"
-                                                    id="second">
-                                            </select>
                                         </div>
                                     </div>
                                 </div>
@@ -276,15 +234,7 @@
                                     </div>
                                     <br>
                                     <br>
-                                    <div class="woocommerce-shipping-fields">
-                                        <!--商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
-                                        <h4>添加一段关于商品的介绍吧</h4>
-                                        <p class="form-row form-row">
-                                            <label for="order_comments" class="">Items Introduction</label>
-                                            <textarea name="iIntroduction" class="input-text " id="order_comments"
-                                                      placeholder="写下产品的优点、特色、使用方法等......"></textarea>
-                                        </p>
-                                    </div>
+
                                 </div>
                             </div>
                             <br>
@@ -296,8 +246,8 @@
 
                                 <div class="form-row place-order">
 
-                                    <input type="button" id="submit" class="button alt" id="place_order" value="修改商品 Confirm"
-                                           data-value="Place order" style="line-height:1.3;border:0"/>
+                                    <center><input type="button" id="submit" class="button alt" id="place_order" value="确认修改 Confirm"
+                                           data-value="Place order" style="width: 50%"/></center>
                                 </div>
                             </div>
                         </form>
