--- a/src/main/webapp/items_manage.html
+++ b/src/main/webapp/items_manage.html
@@ -130,7 +130,7 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="items-Homepage.html"><h5>主 页</h5></a>
+                            <li><a href="items-Homepage.html"><h5>首 页</h5></a>
                             </li>
                             <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
@@ -141,20 +141,12 @@
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
-                            <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
-                                                                         aria-hidden="true"></i></a><span
-                                    class="header-cart-count bg-primary">0</span></span>
-                            </li> -->
+                            <li><a onclick="exit()"><h5 style="color: grey">退 出</h5></a>
+                            </li>
                         </ul>
-                        <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <a onclick="exit()">退 出</a>
-                        </ul>
-                        <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
                             <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
@@ -185,7 +177,7 @@
                                        id="coupon_code" value="">
                             </p>
                             <p class="form-row form-row-last">
-                                <input type="submit" class="button" name="apply_coupon" value="Apply Coupon">
+                                <!--<input type="submit" class="button" name="apply_coupon" value="Apply Coupon">-->
                             </p>
                             <div class="clear"></div>
                         </form>
@@ -289,8 +281,8 @@
 
                                     <div class="form-row place-order">
 
-                                        <input type="button" id="submit" class="button alt" id="place_order" value="登记商品 Confirm"
-                                               data-value="Place order" style="line-height:1.3;border:0"/>
+                                       <center> <input type="button" id="submit" class="button alt" id="place_order" value="登记商品 Confirm"
+                                               data-value="Place order" style="width: 50%"/></center>
                                     </div>
                             </div>
                         </form>
