--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -119,7 +119,7 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="items-Homepage.html"><h5>主 页</h5></a>
+                            <li><a href="items-Homepage.html"><h5>首 页</h5></a>
                             </li>
                             <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
@@ -130,16 +130,12 @@
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
+                            <li><a onclick="exit()"><h5 style="color: grey">退 出</h5></a>
+                            </li>
                         </ul>
-                        <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <a onclick="exit()">退 出</a>
-                        </ul>
-                        <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
                             <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
