--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -238,11 +238,11 @@
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">shoes</div>
                             <div class="b-goods__title">
-                                <a href="shop.html?search='鞋'">时尚潮鞋</a>
-                                <a href="shop.html?search='鞋'"><p style="color: #2a2d32">Nike&nbsp;Adidas&nbsp;<br>PUMA&nbsp;Reebok
+                                <a href="shop.html?search=鞋">时尚潮鞋</a>
+                                <a href="shop.html?search=鞋"><p style="color: #2a2d32">Nike&nbsp;Adidas&nbsp;<br>PUMA&nbsp;Reebok
                                 </p></a>
                             </div>
-                            <a href="shop.html?search='鞋'"><p>SKECHERS&nbsp;&nbsp; New balance</p></a>
+                            <a href="shop.html?search=鞋"><p>SKECHERS&nbsp;&nbsp; New balance</p></a>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
